fix visual overflow in multi selection mode

--- a/packages/circuit-ui/components/AutocompleteInput/components/ComboboxInput/ComboboxInput.module.css
+++ b/packages/circuit-ui/components/AutocompleteInput/components/ComboboxInput/ComboboxInput.module.css
@@ -105,6 +105,10 @@
     max-height: 150px;
     overflow-y: auto;
   }
+
+  .content {
+    max-height: 124px;
+  }
 }
 
 /* Sizes */
@@ -141,4 +145,13 @@
 .m .clear {
   right: var(--cui-spacings-byte);
   bottom: var(--cui-spacings-byte);
+}
+
+.content {
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: var(--cui-spacings-byte);
+  width: 100%;
+  max-height: 174px;
+  overflow-y: auto;
 }
